[package]
name = "snowflakes"
version = "0.1.0"
edition = "2021"
authors = ["Yein Ahn <yein.ahn9@gmail.com>"]
description = "generate snowflakes"
license = "MIT/Apache-2.0"
repository = "https://github.com/ahnanne/snowflakes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
# used when compiling a dynamic library to be loaded from another language

[dependencies]
wasm-bindgen = "0.2.79"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }